# Morty

./: .gitattributes  .gitignore  .gitmodules  LICENSE  ReadMe.md  ReadMe.txt  bash.exe.stackdump  generate_project.py  sh.exe.stackdump
Morty/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Debug  Morty.sln  dllmain.cpp  generate_project.py  imgui.ini  vcpkg.json
Morty/Android/: CMakeLists.txt  NativeLib.cpp
Morty/CMake/: Common.cmake  SetupPython.cmake
Morty/Cmake/: add_assimp.cmake  add_assimp_ios.cmake  add_bullet.cmake  add_sdl.cmake  add_sdl_ios.cmake  add_spirv.cmake  add_spirv2.cmake  add_spirv_ios.cmake  add_vulkan.cmake  add_vulkan_ios.cmake  add_vulkan_macos.cmake
Morty/Core/: CMakeLists.txt  MCoreModule.cpp  MCoreModule.h
Morty/Core/Component/: MComponent.cpp  MComponent.fbs  MComponent.h  MComponentGroup.h  MInputComponent.cpp  MInputComponent.h  MNotifyComponent.cpp  MNotifyComponent.h  MSceneComponent.cpp  MSceneComponent.fbs  MSceneComponent.h
Morty/Core/Container/: MBlockVector.h
Morty/Core/Engine/: MEngine.cpp  MEngine.h  MSystem.cpp  MSystem.h
Morty/Core/Flatbuffer/: Vector_generated.h
Morty/Core/Input/: MInputEvent.cpp  MInputEvent.h  MInputManager.cpp  MInputManager.h
Morty/Core/Math/: MMath.cpp  MMath.h  Matrix.cpp  Matrix.fbs  Matrix.h  Quaternion.cpp  Quaternion.fbs  Quaternion.h  Vector.cpp  Vector.fbs  Vector.h
Morty/Core/Module/: MCoreModule.cpp  MCoreModule.h  MCoreNotify.h
Morty/Core/Object/: MObject.cpp  MObject.h  MObjectSystem.cpp  MObjectSystem.h
Morty/Core/Resource/: MEntityResource.cpp  MEntityResource.fbs  MEntityResource.h  MResource.cpp  MResource.h  MResourceAsyncLoadSystem.cpp  MResourceAsyncLoadSystem.h  MResourceLoader.h  MResourceRef.fbs
Morty/Core/Scene/: MComponent.cpp  MComponent.fbs  MComponent.h  MEntity.cpp  MEntity.fbs  MEntity.h  MEntityID.cpp  MEntityID.h  MGuid.cpp  MGuid.fbs  MGuid.h  MManager.cpp  MManager.h  MScene.cpp  MScene.h  MSubSystem.cpp  MSubSystem.h
Morty/Core/SubSystem/: MNotifySubSystem.cpp  MNotifySubSystem.h
Morty/Core/System/: MComponentSystem.cpp  MComponentSystem.h  MEntitySystem.cpp  MEntitySystem.h  MInputSystem.cpp  MInputSystem.h  MNotifyManager.cpp  MNotifyManager.h  MNotifySystem.cpp  MNotifySystem.h  MObjectSystem.cpp  MObjectSystem.h  MResourceSystem.cpp  MResourceSystem.h  MSceneSystem.cpp  MSceneSystem.h
Morty/Core/TaskGraph/: MMultiThreadTaskGraphWalker.cpp  MMultiThreadTaskGraphWalker.h  MSingleThreadTaskGraphWalker.cpp  MSingleThreadTaskGraphWalker.h  MTaskGraph.cpp  MTaskGraph.fbs  MTaskGraph.h  MTaskGraphWalker.cpp  MTaskGraphWalker.h  MTaskNode.cpp  MTaskNode.fbs  MTaskNode.h  MTaskNodeInput.cpp  MTaskNodeInput.h  MTaskNodeOutput.cpp  MTaskNodeOutput.h
Morty/Core/Thread/: MThreadPool.cpp  MThreadPool.h  MThreadWork.cpp  MThreadWork.h
Morty/Core/Type/: MType.cpp  MType.h
Morty/Core/Utility/: MBlockVector.cpp  MBlockVector.h  MBounds.cpp  MBounds.h  MBoundsAABB.fbs  MBoundsOBB.fbs  MBoundsSphere.fbs  MColor.cpp  MColor.h  MFileHelper.cpp  MFileHelper.h  MFunction.h  MGlobal.cpp  MGlobal.h  MIDPool.h  MJson.cpp  MJson.h  MLogger.cpp  MLogger.h  MMemoryPool.cpp  MMemoryPool.h  MRefCounter.cpp  MRefCounter.h  MSerializer.cpp  MSerializer.h  MSpan.h  MString.cpp  MString.h  MStringId.cpp  MStringId.h  MTimer.cpp  MTimer.h  MTransform.cpp  MTransform.fbs  MTransform.h  MUtils.h  MVariant.cpp  MVariant.fbs  MVariant.h  span.hpp
Morty/Core/Variant/: MVariant.cpp  MVariant.fbs  MVariant.h  MVariantMemory.cpp  MVariantMemory.h
Morty/Demo/: CMakeLists.txt  Demo.cpp  Info.plist  Main.cpp
Morty/Demo/Test/: BasicShape.h  BasicTransform.h  BoneAnimation.h  EnvironmentCubemap.h  Floor.h  GPUDrivenCulling.h  LoadModel.h  LoadModel_Sponza.h  Pbr.h  PointLight.h  ShadowMap.h  VXGI.h  WaveToRGB.h
Morty/Editor/: CMakeLists.txt  imgui.ini
Morty/Editor/Component/: MMoveControllerComponent.cpp  MMoveControllerComponent.h
Morty/Editor/Editor/: ImGuiRenderable.cpp  ImGuiRenderable.h  MainEditor.cpp  MainEditor.h  MaterialView.cpp  MaterialView.h  MoveInputNode.cpp  MoveInputNode.h  NodeTreeView.cpp  NodeTreeView.h  PropertyView.cpp  PropertyView.h  RenderGraphView.cpp  RenderGraphView.h  ResourceView.cpp  SceneTexture.cpp  SceneTexture.h
Morty/Editor/ImGUI/: imconfig.h  imgui.cpp  imgui_impl_dx11.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_widgets.cpp
Morty/Editor/Main/: BaseWidget.cpp  BaseWidget.h  IBaseView.h  Main.cpp  MainEditor.cpp  MainEditor.h  SDLRenderView.cpp  SDLRenderView.h  imgui_include.h
Morty/Editor/Module/: MEditorModule.cpp  MEditorModule.h
Morty/Editor/Property/: PropertyBase.cpp  PropertyBase.h  PropertyMCameraComponent.h  PropertyMDirectionalLightComponent.h  PropertyMModelComponent.cpp  PropertyMModelComponent.h  PropertyMPointLight.h  PropertyMRenderMeshComponent.h  PropertyMRenderableMeshComponent.h  PropertyMSceneComponent.h  PropertyMSpotLight.h
Morty/Editor/Render/: ImGuiRenderable.cpp  ImGuiRenderable.h  SceneTexture.cpp  SceneTexture.h  SceneViewer.cpp  SceneViewer.h
Morty/Editor/System/: MMoveControllerSystem.cpp  MMoveControllerSystem.h
Morty/Editor/Test/: BasicShape.h  BasicTransform.h  BoneAnimation.h  EnvironmentCubemap.h  Floor.h  GPUDrivenCulling.h  LoadModel.h  LoadModel_Sponza.h  Pbr.h  PointLight.h  ShadowMap.h  WaveToRGB.h
Morty/Editor/Utility/: IniConfig.cpp  IniConfig.h  MoveInputNode.cpp  MoveInputNode.h  (+8 more)
Morty/Math3D/: .gitignore  Math3D.cpp  Math3D.vcxproj  Math3D.vcxproj.filters  README.md  stdafx.cpp
Morty/Morty/: CMakeLists.txt  MNotifyManager.cpp  MNotifyManager.h  Morty.cpp  Morty.vcxproj  Morty.vcxproj.filters  ReadMe.txt  stdafx.cpp
Morty/Morty.xcworkspace/: contents.xcworkspacedata
Morty/MortyDemo/: MortyDemo.cpp  MortyDemo.vcxproj  MortyDemo.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h
Morty/MortyEditor/: imgui.ini
Morty/Reflection/: CMakeLists.txt
Morty/Render/: CMakeLists.txt  MRenderModule.cpp  MRenderModule.h  MRenderNotify.h
Morty/Resource/: NodeEditor.json  imgui.ini
Morty/Test/: CMakeLists.txt  Test.cpp
(+1354 files in other folders)
